# mysite_dj_dio

./: README.md  build.sh  db.sqlite3  pyproject.toml  serve.py
accounts/: views.py
accounts/templates/accounts/: login.html
contacts/: forms.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: create.html
mysite/: admin.py  settings.py  urls.py
polls/: models.py  views.py
polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
polls/templates/polls/: results.html
tests/contacts/: test_forms.py  test_views.py
tests/polls/: test_models.py
